--- a/index.html
+++ b/index.html
@@ -145,6 +145,15 @@
       background: #333;
       color: #fff;
     }
+    .player-badge {
+  position: relative;
+}
+
+.player-badge svg {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
   </style>
 </head>
 <body>
@@ -155,6 +164,12 @@
       <div class="player-badge" id="playerBadge">
         <img id="badgePFP" src="https://api.dicebear.com/6.x/pixel-art/svg?seed=anon" alt="PFP" />
         <div class="badge-info">
+          <!-- Share Badge Icon in Badge -->
+        <div onclick="shareBadge()" title="Share on 𝕏" style="margin-left:auto;">
+         <svg width="20" height="20" viewBox="0 0 24 24" fill="#fff" xmlns="http://www.w3.org/2000/svg" style="cursor:pointer;">
+         <path d="M19.633 7.997c.013.18.013.361.013.542 0 5.524-4.205 11.894-11.893 11.894-2.365 0-4.567-.692-6.414-1.876.33.038.648.051.991.051a8.412 8.412 0 005.215-1.798 4.194 4.194 0 01-3.917-2.91c.256.038.499.063.768.063.368 0 .736-.051 1.08-.14a4.186 4.186 0 01-3.361-4.105v-.051a4.21 4.21 0 001.894.53 4.197 4.197 0 01-1.873-3.491c0-.768.204-1.473.56-2.086a11.897 11.897 0 008.627 4.37 4.719 4.719 0 01-.102-.961 4.194 4.194 0 017.257-2.868 8.286 8.286 0 002.668-1.02 4.196 4.196 0 01-1.84 2.314 8.373 8.373 0 002.404-.648 8.837 8.837 0 01-2.092 2.153z"/>
+        </svg>
+        </div>
           <div class="nickname" id="badgeNickname">anon</div>
           <div class="handle" id="badgeHandle">𝕏: @handle</div>
           <div class="badge-stats">
@@ -170,12 +185,6 @@
         <div id="croBalance" class="badge">CRO: 0</div>
       </div>
     </div>
-    <div style="text-align: center; margin-top: 14px;">
-  <button onclick="shareBadge()" style="padding:8px 18px; background:#00ffe1; color:#000; border:none; border-radius:8px; font-weight:bold; cursor:pointer;">
-    Share Your Badge
-  </button>
-</div>
-
     
     <div class="section">
       <div class="title">Latest Announcement</div>
@@ -381,30 +390,23 @@ loadNewPlayers();
 
       function shareBadge() {
   const nickname = document.getElementById("badgeNickname").textContent.replace(/^@/, "") || "anon";
-  const url = "https://quantum-vault-y2kxroast.netlify.app";
+  const earnings = document.getElementById("badgeY2K").textContent.replace("Y2K: ", "") || "0";
+  const wins = document.getElementById("badgeWins").textContent.replace("Wins: ", "") || "0";
+  const games = document.getElementById("badgeGames").textContent.replace("Games: ", "") || "0";
+  const url = "https://y2kcoin.org";
   const tags = "#CROFAM #puushfuncronos #Y2KCoin #Y2KxROAST";
 
   const postTemplates = [
-    "Badge locked. Style upgraded. I'm live in the Quantum Vault.",
-    "Quantum identity secured. Let the $Y2K era begin.",
-    "I minted my moment in the Vault. Badge on. Let’s build.",
-    "Y2K Coin holders know. The Vault is where identity begins.",
-    "Claim your space, mint your name. Quantum Vault open.",
-    "No fluff. Just badges, momentum, and a cosmic grind.",
-    "You ever felt early *and* stylish? I did. Quantum Vault badge minted.",
-    "This isn’t alpha. It’s access. Badge in. Vault open.",
-    "Badge flexed. Vibes locked. #QuantumVault.",
-    "The digital future isn’t coming. It’s minted — in the Vault.",
-    "I’m part of the early chaos. The organized madness. The Quantum Vault.",
-    "Y2K Coin gave us a key. The Vault gave us identity.",
-    "This ain’t no JPEG. It’s your entrance pass.",
-    "If you know, you badge up. That’s it.",
-    "Your wallet belongs here. Your badge proves it.",
-    "It’s a vibe. It’s an identity. It’s live.",
-    "Vault’s open. Earned my digital stripe.",
-    "The badge is just the beginning. #CROFAM knows.",
-    "I didn’t wait for the hype. I *became* it.",
-    "I minted history. Now it’s your turn."
+    `I just minted my badge in the Quantum Vault. Games played: ${games}, Wins: ${wins}, Y2K earned: ${earnings}.`,
+    `Verified in the Quantum Vault. Stats — Wins: ${wins}, Games: ${games}, Y2K: ${earnings}. Join us.`,
+    `Badge locked. Stats tracked. I'm in. Wins: ${wins}, Games: ${games}, $Y2K: ${earnings}.`,
+    `Badge flexed. Quantum Vault open. Games: ${games} | Wins: ${wins} | Y2K: ${earnings}.`,
+    `I didn’t just join. I activated. Vault stats — ${wins} wins, ${games} games, ${earnings} Y2K.`,
+    `Quantum Vault stats: ${games} games, ${wins} wins, ${earnings} Y2K. Badge secured.`,
+    `Minted identity. Quantum Vault stats: Y2K ${earnings}, Wins ${wins}, Games ${games}.`,
+    `Live inside the Quantum Vault. ${wins} wins. ${games} battles. ${earnings} Y2K to show.`,
+    `It’s not a badge. It’s a record. ${games} games. ${wins} wins. ${earnings} Y2K earned.`,
+    `I'm early, and I’ve got the badge to prove it. ${games} games | ${wins} wins | ${earnings} Y2K.`
   ];
 
   const randomText = postTemplates[Math.floor(Math.random() * postTemplates.length)];
