--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       border-radius: 50%;
       object-fit: cover;
       margin-right: 12px;
-      border: 2px solid #00ffe1;
+      border: 2px solid inherit;
     }
     .badge-info {
       display: flex;
