--- a/index.html
+++ b/index.html
@@ -275,9 +275,10 @@ async function connectWalletAndLoad() {
     document.getElementById("badgeWins").textContent = `Wins: ${data.wins || 0}`;
 
     if (data.badgeColor) {
-      document.getElementById("playerBadge").style.borderColor = rimColor;
-      document.getElementById("editRimColor").value = data.badgeColor;
-    }
+  document.getElementById("playerBadge").style.borderColor = data.badgeColor;
+  document.getElementById("badgePFP").style.borderColor = data.badgeColor;
+  document.getElementById("editRimColor").value = data.badgeColor;
+}
 
     document.getElementById("editNickname").value = data.username || "";
     document.getElementById("editHandle").value = data.xHandle || "";
